Clase8/plantillas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-app1
  name: my-app1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app1
  template:
    metadata:
      labels:
        app: my-app1
    spec:
      containers:
      - image: ngninx
        imagePullPolicy: Always
        name: ngninx
        ports:
          - containerPort: 80
