Clase8/plantillas/pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-pod
  name: my-pod
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: my-pod
